src/main/java/oo/solid/dip/sample/good/Pessoa.java
package oo.solid.dip.sample.good;

public interface Pessoa {
    String getDados();
}
