src/main/java/oo/solid/dip/sample/bad/PessoaFisica.java
package oo.solid.dip.sample.bad;

public class PessoaFisica {
    public String getDados() {
        return ""; // Dados da pessoa
    }
}
